--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,24 @@
   </head>
 
   <body>
+    <nav>
+      <div>
+        <a href="/">
+          <i class="fab fa-firstdraft fa-fw"></i>
+    
+          All Users
+        </a>
+      </div>
+    
+      <div>
+        <a href="/photos">
+          <i class="fas fa-users"></i>
+    
+          All Photos
+        </a>
+      </div>
+    </nav>
+
     <%= yield %>
   </body>
 </html>
