--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,5 +1,18 @@
 <h1>List of photos</h1>
 
+<form action="/post_photo" method="post">
+  <label for="browser_input">Image URL</label>
+  <input id="browser_input" type="text" name="qs_image" placeholder="Enter a URL for the image...">
+
+  <label for="browser_caption">Caption</label>
+  <textarea id="browser_caption" name="qs_caption" placeholder="Enter a caption for the photo..."></textarea>
+
+  <label for="browser_user_id">Owner</label>
+  <input id="browser_user_id" type="text" name="qs_owner_id">
+
+  <button>Add photo</button>
+</form>
+
 <table border="1">
   <tr>
     <th>Image</th>
