--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,16 @@
 <h1>List of users</h1>
 
+<form action="/post_user" method="post">
+  <label for="browser_username">Username</label>
+  <input id="browser_username" type="text" name="qs_username" placeholder="Enter a username...">
+
+  <label for="browser_private">
+    <input id="browser_private" type="checkbox" name="qs_private"> Private?
+  </label>
+
+  <button>Add user</button>
+</form>
+
 <table border="1">
   <tr>
     <th>
