--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,19 @@
 
   <dt>Following</dt>
   <dd><%= @user.following.count %></dd>
+
+  <dt>Edit photo</dt>
+  <dd>
+    <form action="/patch_user/<%= @user.id %>" method="post">
+      <label for="browser_username">Username</label>
+      <input id="browser_username" type="text" name="qs_username" placeholder="Enter a username..." value="<%= @user.username %>">
+
+      <label for="browser_private">Private?</label>
+      <input id="browser_private" type="checkbox" name="qs_private" <%= " checked" if @user.private %>>
+
+      <button>Update user</button>
+    </form>
+  </dd>
 </dl>
 
 <nav>
