--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -7,7 +7,7 @@
   <label for="browser_caption">Caption</label>
   <textarea id="browser_caption" name="qs_caption" placeholder="Enter a caption for the photo..."></textarea>
 
-  <label for="browser_user_id">Owner</label>
+  <label for="browser_user_id">Owner ID</label>
   <input id="browser_user_id" type="text" name="qs_owner_id">
 
   <button>Add photo</button>
