--- a/app/views/users/liked_photos.html.erb
+++ b/app/views/users/liked_photos.html.erb
@@ -14,7 +14,7 @@
 <nav>
   <ul>
     <li>
-      <a href="/users/<%= @user.username %>">Own photos</a>
+      <a href="/users/<%= @user.username %>">Profile</a>
     </li>
     <li>
       <a href="/users/<%= @user.username %>/liked_photos">Liked photos</a>
